Add real books and descriptions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "Prachet"
+        "Discworld",
+        "Lipwig",
+        "Prachet",
+        "Sharma"
     ]
 }
