Set global font

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Anyhoo",
         "Discworld",
         "Lipwig",
+        "pomofocus",
         "Prachet",
         "Sharma"
     ]
